[package]
name = "postly"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.7.9"
util = { path = "../util" }
borsh = "0.9.1"
borsh-derive = "0.9.1"


[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "postly"
crate-type = ["cdylib", "lib"]

